crates/ruff_python_parser/tests/snapshots/invalid_syntax@tuple_context_manager_py38.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/tuple_context_manager_py38.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(
            46,
        ),
        range: 0..327,
        body: [
            With(
                StmtWith {
                    node_index: NodeIndex(
                        8,
                    ),
                    range: 216..236,
                    is_async: false,
                    items: [
                        WithItem {
                            range: 222..225,
                            node_index: NodeIndex(
                                2,
                            ),
                            context_expr: Name(
                                ExprName {
                                    node_index: NodeIndex(
                                        1,
                                    ),
                                    range: 222..225,
                                    id: Name("foo"),
                                    ctx: Load,
                                },
                            ),
                            optional_vars: None,
                        },
                        WithItem {
                            range: 227..230,
                            node_index: NodeIndex(
                                5,
                            ),
                            context_expr: Name(
                                ExprName {
                                    node_index: NodeIndex(
                                        4,
                                    ),
                                    range: 227..230,
                                    id: Name("bar"),
                                    ctx: Load,
                                },
                            ),
                            optional_vars: None,
                        },
                    ],
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(
                                    7,
                                ),
                                range: 233..236,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(
                                            6,
                                        ),
                                        range: 233..236,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            With(
                StmtWith {
                    node_index: NodeIndex(
                        27,
                    ),
                    range: 237..274,
                    is_async: false,
                    items: [
                        WithItem {
                            range: 242..269,
                            node_index: NodeIndex(
                                24,
                            ),
                            context_expr: Call(
                                ExprCall {
                                    node_index: NodeIndex(
                                        21,
                                    ),
                                    range: 246..261,
                                    func: Name(
                                        ExprName {
                                            node_index: NodeIndex(
                                                17,
                                            ),
                                            range: 246..250,
                                            id: Name("open"),
                                            ctx: Load,
                                        },
                                    ),
                                    arguments: Arguments {
                                        range: 250..261,
                                        node_index: NodeIndex(
                                            20,
                                        ),
                                        args: [
                                            StringLiteral(
                                                ExprStringLiteral {
                                                    node_index: NodeIndex(
                                                        19,
                                                    ),
                                                    range: 251..260,
                                                    value: StringLiteralValue {
                                                        inner: Single(
                                                            StringLiteral {
                                                                range: 251..260,
                                                                node_index: NodeIndex(
                                                                    18,
                                                                ),
                                                                value: "foo.txt",
                                                                flags: StringLiteralFlags {
                                                                    quote_style: Single,
                                                                    prefix: Empty,
                                                                    triple_quoted: false,
                                                                },
                                                            },
                                                        ),
                                                    },
                                                },
                                            ),
                                        ],
                                        keywords: [],
                                    },
                                },
                            ),
                            optional_vars: Some(
                                Name(
                                    ExprName {
                                        node_index: NodeIndex(
                                            23,
                                        ),
                                        range: 266..269,
                                        id: Name("foo"),
                                        ctx: Store,
                                    },
                                ),
                            ),
                        },
                    ],
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(
                                    26,
                                ),
                                range: 271..274,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(
                                            25,
                                        ),
                                        range: 271..274,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            With(
                StmtWith {
                    node_index: NodeIndex(
                        39,
                    ),
                    range: 275..309,
                    is_async: false,
                    items: [
                        WithItem {
                            range: 284..287,
                            node_index: NodeIndex(
                                30,
                            ),
                            context_expr: Name(
                                ExprName {
                                    node_index: NodeIndex(
                                        29,
                                    ),
                                    range: 284..287,
                                    id: Name("foo"),
                                    ctx: Load,
                                },
                            ),
                            optional_vars: None,
                        },
                        WithItem {
                            range: 291..294,
                            node_index: NodeIndex(
                                33,
                            ),
                            context_expr: Name(
                                ExprName {
                                    node_index: NodeIndex(
                                        32,
                                    ),
                                    range: 291..294,
                                    id: Name("bar"),
                                    ctx: Load,
                                },
                            ),
                            optional_vars: None,
                        },
                        WithItem {
                            range: 298..301,
                            node_index: NodeIndex(
                                36,
                            ),
                            context_expr: Name(
                                ExprName {
                                    node_index: NodeIndex(
                                        35,
                                    ),
                                    range: 298..301,
                                    id: Name("baz"),
                                    ctx: Load,
                                },
                            ),
                            optional_vars: None,
                        },
                    ],
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(
                                    38,
                                ),
                                range: 306..309,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(
                                            37,
                                        ),
                                        range: 306..309,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            With(
                StmtWith {
                    node_index: NodeIndex(
                        45,
                    ),
                    range: 310..326,
                    is_async: false,
                    items: [
                        WithItem {
                            range: 316..319,
                            node_index: NodeIndex(
                                42,
                            ),
                            context_expr: Name(
                                ExprName {
                                    node_index: NodeIndex(
                                        41,
                                    ),
                                    range: 316..319,
                                    id: Name("foo"),
                                    ctx: Load,
                                },
                            ),
                            optional_vars: None,
                        },
                    ],
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(
                                    44,
                                ),
                                range: 323..326,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(
                                            43,
                                        ),
                                        range: 323..326,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
## Unsupported Syntax Errors

  |
3 | # is parsed as a tuple, but this will always cause a runtime error, so we flag it
4 | # anyway
5 | with (foo, bar): ...
  |      ^ Syntax Error: Cannot use parentheses within a `with` statement on Python 3.8 (syntax was added in Python 3.9)
6 | with (
7 |   open('foo.txt')) as foo: ...
  |


   |
 6 | with (
 7 |   open('foo.txt')) as foo: ...
 8 | with (
   |      ^ Syntax Error: Cannot use parentheses within a `with` statement on Python 3.8 (syntax was added in Python 3.9)
 9 |   foo,
10 |   bar,
   |


   |
11 |   baz,
12 | ): ...
13 | with (foo,): ...
   |      ^ Syntax Error: Cannot use parentheses within a `with` statement on Python 3.8 (syntax was added in Python 3.9)
   |
